--- a/app/src/main/res/layout/rc_charger_layout.xml
+++ b/app/src/main/res/layout/rc_charger_layout.xml
@@ -35,6 +35,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="start"
+            android:text="13sp"
             android:textColor="@color/black"
             app:layout_constraintBottom_toTopOf="@+id/rc_tv_cp_type"
             app:layout_constraintEnd_toEndOf="parent"
@@ -47,10 +48,10 @@
             chargerType="@{charger.cpTp}"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:gravity="start"
             android:textColor="@color/black"
-            android:textSize="12sp"
-            android:layout_marginEnd="8dp"
+            android:textSize="11sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/rc_tv_cp_stat"
