--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,7 @@
     <color name="button_false">#999999</color>
     <color name="gray">#808080</color>
     <color name="red">#FF0000</color>
+    <color name="text_blue">#0068FE</color>
+    <color name="empty_view">#C2C0C4</color>
+    <color name="rc_background">#E7E7E7</color>
 </resources>
