--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -129,7 +129,7 @@
         <Button
             android:id="@+id/btn_navigation"
             android:layout_width="0dp"
-            android:layout_height="40dp"
+            android:layout_height="60dp"
             android:layout_marginTop="8dp"
             android:backgroundTint="@color/text_blue"
             android:onClick="@{() -> inputs.onNavigationClick(chargeInfo.lat, chargeInfo.longi)}"
@@ -183,6 +183,7 @@
             app:layout_constraintTop_toBottomOf="@+id/tv_charger_info" />
 
         <View
+            android:id="@+id/view2"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginTop="16dp"
@@ -190,6 +191,17 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/info_rc" />
+
+        <FrameLayout
+            android:layout_margin="12dp"
+            android:id="@+id/info_map"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view2"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
